to CRUD for cars add upload/delete photo, add CRUD for cars to swagger
