# src/controllers/car.controller.ts
@@ -1,6 +1,8 @@
 import { NextFunction, Request, Response } from 'express';
+import { UploadedFile } from 'express-fileupload';
 
 import { ApiError } from '../errors';
+import { carMapper } from '../mappers';
 import { carService } from '../services';
 import { ICar, ITokenPayload } from '../types';
 
@@ -13,7 +15,11 @@ class CarController {
     try {
       const cars = await carService.getAll();
 
-      return res.status(200).json(cars);
+      const carsForResponse = cars.map((car) => {
+        return carMapper.carForResponse(car);
+      });
+
+      return res.status(200).json(carsForResponse);
     } catch (e) {
       next(new ApiError(e.message, e.status));
     }
@@ -28,7 +34,9 @@ class CarController {
       const { _id } = req.res.locals.tokenPayload as ITokenPayload;
 
       const car = await carService.create(req.body, _id);
-      return res.status(200).json(car);
+      const carForResponse = carMapper.carForResponse(car);
+
+      return res.status(200).json(carForResponse);
     } catch (e) {
       next(new ApiError(e.message, e.status));
     }
@@ -41,7 +49,9 @@ class CarController {
   ): Promise<Response<ICar>> {
     try {
       const car = await carService.getById(req.params.carId);
-      return res.status(200).json(car);
+      const carForResponse = carMapper.carForResponse(car);
+
+      return res.status(200).json(carForResponse);
     } catch (e) {
       next(new ApiError(e.message, e.status));
     }
@@ -56,8 +66,9 @@ class CarController {
       const { carId } = req.params;
 
       const car = await carService.update(carId, req.body);
+      const carForResponse = carMapper.carForResponse(car);
 
-      return res.status(200).json(car);
+      return res.status(200).json(carForResponse);
     } catch (e) {
       next(new ApiError(e.message, e.status));
     }
@@ -72,6 +83,41 @@ class CarController {
       await carService.delete(req.params.carId);
 
       return res.sendStatus(204);
+    } catch (e) {
+      next(new ApiError(e.message, e.status));
+    }
+  }
+
+  public async uploadPhoto(
+    req: Request,
+    res: Response,
+    next: NextFunction,
+  ): Promise<Response<ICar>> {
+    try {
+      const { carId } = req.params;
+
+      const photo = req.files.photo as UploadedFile;
+
+      const car = await carService.uploadPhoto(photo, carId);
+
+      const carForResponse = carMapper.carForResponse(car);
+
+      return res.status(201).json(carForResponse);
+    } catch (e) {
+      next(new ApiError(e.message, e.status));
+    }
+  }
+
+  public async deletePhoto(
+    req: Request,
+    res: Response,
+    next: NextFunction,
+  ): Promise<void> {
+    try {
+      const { car } = req.res.locals;
+
+      await carService.deletePhoto(req.params.carId, car);
+      res.sendStatus(204);
     } catch (e) {
       next(new ApiError(e.message, e.status));
     }
