# src/routers/car.router.ts
@@ -1,7 +1,12 @@
 import { Router } from 'express';
 
 import { carController } from '../controllers';
-import { authMiddleware, commonMiddleware } from '../middlewares';
+import {
+  authMiddleware,
+  carMiddleware,
+  commonMiddleware,
+  fileMiddleware,
+} from '../middlewares';
 import { CarValidator } from '../validators';
 
 const router = Router();
@@ -14,13 +19,43 @@ router.post(
   carController.create,
 );
 
-router.get('/:carId', carController.getById);
+router.get(
+  '/:carId',
+  commonMiddleware.isIdValid('carId'),
+  carMiddleware.getByIdOrThrow,
+  carController.getById,
+);
 router.put(
   '/:carId',
   authMiddleware.checkAccessToken,
+  commonMiddleware.isIdValid('carId'),
+  carMiddleware.getByIdOrThrow,
   commonMiddleware.isBodyValid(CarValidator.update),
   carController.update,
 );
-router.delete('/:carId', authMiddleware.checkAccessToken, carController.delete);
+router.delete(
+  '/:carId',
+  authMiddleware.checkAccessToken,
+  commonMiddleware.isIdValid('carId'),
+  carMiddleware.getByIdOrThrow,
+  carController.delete,
+);
+
+router.post(
+  '/:carId/photo',
+  authMiddleware.checkAccessToken,
+  commonMiddleware.isIdValid('carId'),
+  carMiddleware.getByIdOrThrow,
+  fileMiddleware.isPhotoValid,
+  carController.uploadPhoto,
+);
+
+router.delete(
+  '/:carId/photo',
+  authMiddleware.checkAccessToken,
+  commonMiddleware.isIdValid('carId'),
+  carMiddleware.getByIdOrThrow,
+  carController.deletePhoto,
+);
 
 export const carRouter = router;
